--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ is a commment! */
 p {
   font-size: 1em;
   line-height:1.5em;
+}
+figcaption {
+  font-weight: normal;
+  font-size: 0.75em;
+  line-height:1.5em;
+  font-family: Georgia, "New Times Roman", serif;
 
-figcaption
 }
