--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@ p {
   line-height:1.5em;
 }
 figcaption {
-  font-weight: normal;
+  /*font-weight: normal;
   font-size: 0.75em;
   line-height:1.5em;
-  font-family: Georgia, "New Times Roman", serif;
+  font-family: Georgia, "New Times Roman", serif;*/
+  font: normal 0.75em/1.5em Gerogia, "New Times Roman", serif;
+  color:#000000;
 
 }
