--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Elsie+Swash+Caps');
+@import url('https://fonts.googleapis.com/css?family=Clicker+Script');
 
 /* This
 is a commment! */
@@ -12,7 +13,7 @@ figcaption {
   font-size: 0.75em;
   line-height:1.5em;
   font-family: Georgia, "New Times Roman", serif;*/
-  font: normal 0.75em/1.5em Gerogia, "New Times Roman", serif;
+  font: normal 0.75em/1.5em Else Swash Caps, cursive;
   color:#777;
 
 }
